Fix CSS bugs on home page and decision page.
Fixed a layout bug with the home page and the two column layout.
Also fixed a layout bug when showing a decision. Still learning
how to use bootstrap and its dependencies :)

--- a/app/assets/stylesheets/choice.css.scss
+++ b/app/assets/stylesheets/choice.css.scss
@@ -4,6 +4,7 @@
 
 #decision-choices {
 	margin-bottom: 30px;
+	width: 540px;
 }
 
 #add-choice {
